--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description"
+        content="Welcome to my personal website. I am a software engineer currently working at 99.co" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=News+Cycle|Righteous" rel="stylesheet">
     <link href="%PUBLIC_URL%/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
